--- a/src/index.html
+++ b/src/index.html
@@ -47,9 +47,19 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="#" target="_blank">Sandra Galic</a> and is
+          <a
+            href="#https://github.com/SandraG88/My-first-sheCodes-project/commit/bbbcfb07f9910c7fdaffb99e23734b06a21ff1b1"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a
+            href="#https://673759f155187c3195e85f2b--transcendent-kangaroo-574999.netlify.app/"
+            target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
